// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API client Org Hook throws generic HTTP error response 1`] = `
{
  "code": "ERROR_CODE_OTHER",
  "message": "Custom error",
}
`;

exports[`API client Org Hook throws specific HTTP error response 1`] = `
{
  "code": "ERROR_CODE_OTHER",
  "message": "Unavailable For Legal Reasons",
}
`;

exports[`API client Org create 1`] = `
{
  "description": "Org NEW description",
  "id": 5,
  "name": "Org NEW",
  "nameAndDesc": "Org NEW: Org NEW description",
  "slug": "orgNEW",
  "summary": "Org NEWOrg NEW description",
}
`;

exports[`API client Org custom create 1`] = `
{
  "description": "Org custom NEW description",
  "id": 6,
  "name": "Org Custom NEW",
  "nameAndDesc": "Org Custom NEW: Org custom NEW description",
  "slug": "orgCustomNEW",
  "summary": "Org Custom NEWOrg custom NEW description",
}
`;

exports[`API client Org custom endpoint - fetch action 1`] = `
{
  "name": "Fetch me org 1",
  "repoSlug": "repo1",
}
`;

exports[`API client Org custom many endpoint - action responds 1`] = `
{
  "counter": 1,
  "name": "Org Custom Many",
}
`;

exports[`API client Org custom one endpoint - action responds 1`] = `
{
  "counter": 1,
  "name": "Org Custom One",
}
`;

exports[`API client Org custom one endpoint - action with query 1`] = `
{
  "inputName": "Org 1",
  "inputOrgId": 1,
  "orgById": [
    {
      "id": 1,
      "name": "Org 1",
    },
  ],
  "orgByName": [
    {
      "id": 1,
      "name": "Org 1",
    },
  ],
}
`;

exports[`API client Org custom update 1`] = `
{
  "description": "Org custom 2A description",
  "id": 2,
  "name": "Org custom 2A",
  "nameAndDesc": "Org custom 2A: Org custom 2A description",
  "slug": "org2",
  "summary": "Org custom 2AOrg custom 2A description",
}
`;

exports[`API client Org get 1`] = `
{
  "description": "Org 1 description",
  "id": 1,
  "name": "Org 1",
  "nameAndDesc": "Org 1: Org 1 description",
  "slug": "org1",
  "summary": "Org 1Org 1 description",
}
`;

exports[`API client Org list 1`] = `
[
  {
    "description": "Org 1 description",
    "id": 1,
    "name": "Org 1",
    "nameAndDesc": "Org 1: Org 1 description",
    "slug": "org1",
    "summary": "Org 1Org 1 description",
  },
  {
    "description": "Org 2 description",
    "id": 2,
    "name": "Org 2",
    "nameAndDesc": "Org 2: Org 2 description",
    "slug": "org2",
    "summary": "Org 2Org 2 description",
  },
  {
    "description": "Org 3 description",
    "id": 3,
    "name": "Org 3",
    "nameAndDesc": "Org 3: Org 3 description",
    "slug": "org3",
    "summary": "Org 3Org 3 description",
  },
  {
    "description": "Org 4 description",
    "id": 4,
    "name": "Org 4",
    "nameAndDesc": "Org 4: Org 4 description",
    "slug": "org4",
    "summary": "Org 4Org 4 description",
  },
]
`;

exports[`API client Org update 1`] = `
{
  "description": "Org 2A description",
  "id": 2,
  "name": "Org 2A",
  "nameAndDesc": "Org 2A: Org 2A description",
  "slug": "org2",
  "summary": "Org 2AOrg 2A description",
}
`;
